# rig-tap

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  justfile  release-plz.toml  run_capture.rs  test_hook.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yml  conventional-commits.yml  release-plz.yml
examples/: observe_responses_api.rs  otel_exporter_recipe.rs
src/: chained.rs  dispatch.rs  emit.rs  error.rs  event.rs  extract.rs  hook.rs  insights.rs  lib.rs  metrics_ext.rs  observed_memory.rs  query.rs  redaction.rs  responses_extract.rs  responses_session.rs  sampling.rs  subscriber.rs
tests/: dispatch_observe.rs  end_to_end.rs  enterprise.rs  metrics.rs  responses_session.rs
